// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en <GifGrid /> should show items when usefetch load data 1`] = `
<Fragment>
  <h3
    className="animate__fadeIn"
  >
    category
  </h3>
  <div
    className="card-grid album py-5 bg-light animate__fadeIn"
  >
    <GifGridItem
      id="abc"
      key="abc"
      title="text"
      url="https://xdxd.com/png"
    />
    <GifGridItem
      id="123"
      key="123"
      title="text"
      url="https://xdxd.com/png"
    />
  </div>
</Fragment>
`;

exports[`Pruebas en <GifGrid /> should show the component successfully 1`] = `
<Fragment>
  <h3
    className="animate__fadeIn"
  >
    category
  </h3>
  <div
    class="alert alert-primary"
    role="alert"
  >
    Loading
  </div>
  <div
    className="card-grid album py-5 bg-light animate__fadeIn"
  />
</Fragment>
`;
